--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ script:
   - cp docs/assets/leaflet.responsive.popup.rtl.css . 
   - cp docs/assets/leaflet.responsive.popup.css . 
   - cp docs/assets/leaflet.responsive.popup.js . 
+  - git commit -a -m "Use assets as distrib files"
   
 deploy:
   provider: npm
